--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,8 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+uvicorn = "^0.35.0"
+fastapi = "^0.116.1"
+
