--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi (>=0.116.1,<0.117.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
-    "psycopg[binary] (>=3.2.9,<4.0.0)"
+    "psycopg[pool] (>=3.2.9,<4.0.0)"
 ]
 
 
