--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "uvicorn (>=0.35.0,<0.36.0)",
     "psycopg[pool] (>=3.2.9,<4.0.0)",
     "sqlalchemy (>=2.0.43,<3.0.0)",
-    "python-dotenv (>=1.1.1,<2.0.0)"
+    "python-dotenv (>=1.1.1,<2.0.0)",
+    "email-validator (>=2.2.0,<3.0.0)"
 ]
 
 
