--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "sqlalchemy (>=2.0.43,<3.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "email-validator (>=2.2.0,<3.0.0)",
-    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
+    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
+    "python-jose[cryptography] (>=3.5.0,<4.0.0)"
 ]
 
 
